objects/gps_FundingAwardContract__c.object
<CustomObject>
    <fields>
        <fullName>AwardeeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awardee</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funding Award Contracts</relationshipLabel>
        <relationshipName>Funding_Award_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>Funding Award</label>
        <referenceTo>FundingAward</referenceTo>
        <relationshipLabel>Funding Award Contracts</relationshipLabel>
        <relationshipName>Funding_Award_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Funding Award Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Award Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>